Fix disappearing buttons and such because of overflow:hidden.

--- a/src/app/stylesheets/layout.scss
+++ b/src/app/stylesheets/layout.scss
@@ -41,7 +41,7 @@ h2, h3 {
   left: 0px;
   right: 0px;
   bottom: 0px;
-  overflow: hidden;
+  overflow: auto;
   background-color: white; }
 
 #side {
